Fix details aligns

--- a/src/assets/style/pages/expense-details.scss
+++ b/src/assets/style/pages/expense-details.scss
@@ -6,9 +6,9 @@
     padding: 30px;
     display: flex;
     flex-direction: column;
+    margin-inline: auto;
 
     .btn-go-back {
-        // align-self: self-end;
         color: $clr3;
     }
 
